feat(core/modules): enhance JPMS documentation
- JPMS architecture overview
- module-info.java syntax (requires, exports, opens, uses, provides)
- Module compilation and packaging
- jlink (custom runtime)
- jpackage (JDK 16+ packaging)
- Strong encapsulation (JDK 17+)
- ServiceLoader with modules
- Automatic modules
- Layer API for dynamic modules

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>